--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "deploy",
-  "version": "0.0.1",
+  "name": "fm-dialogs",
+  "version": "3.1.1",
   "devDependencies": {
     "grunt": "latest",
     "grunt-bower": "latest",
