[TASK] Update code style

--- a/.jscsrc
+++ b/.jscsrc
@@ -38,7 +38,8 @@
 	"requireCamelCaseOrUpperCaseIdentifiers": true,
 	"requireCapitalizedComments": {
 		"allExcept": [
-      "globals",
+			"globals",
+			"jshint",
 			"noinspection"
 		]
 	},
