--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "fm-dialogs",
   "dependencies": {
-    "angular": "1.4.7",
-    "angular-bootstrap": "0.14.2",
-    "angular-sanitize": "1.4.7",
-    "bootstrap": "3.3.4"
+    "angular": "~1.4.8",
+    "angular-bootstrap": "~0.14.3",
+    "angular-sanitize": "~1.4.8",
+    "bootstrap": "~3.3.6"
   },
   "main": [
     "dialogs.css",
