--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,21 @@
 {
   "name": "fm-dialogs",
+  "description": "FairManager Dialog Component",
+  "homepage": "https://github.com/fairmanager/fm-tdialogs",
+  "authors": [
+    "Michael Conroy <michael.e.conroy@gmail.com>",
+    "Oliver Salzburg <oliver.salzburg@gmail.com>"
+  ],
+  "main": "dist/fm-dialogs.tpls.js",
+  "license": "MIT",
+  "private": false,
   "dependencies": {
-    "angular": "~1.4.8",
-    "angular-bootstrap": "~0.14.3",
-    "angular-sanitize": "~1.4.8",
-    "bootstrap": "~3.3.6"
+    "angular": ">=1.2.7",
+    "bootstrap": ">=3.0.3"
   },
-  "main": [
-    "dialogs.css",
-    "dialogs.js"
+  "ignore": [
+    "**/.*",
+    "bower_components",
+    "node_modules"
   ]
 }
