--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
   "name": "fm-dialogs",
   "version": "5.1.1",
+  "description": "FairManager Dialog Component",
+  "main": "dist/fm-dialogs.tpls.js",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-html2js": "^0.3.5",
+    "grunt-ng-annotate": "^1.0.1",
+    "jscs": "^2.6.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fairmanager/fm-dialogs.git"
   },
+  "keywords": [
+    "angular",
+    "bootstrap",
+    "dialogs"
+  ],
   "author": [
     {
       "name": "Michael Conroy",
@@ -16,23 +37,14 @@
       "email": "oliver.salzburg@gmail.com"
     }
   ],
-  "devDependencies": {
-    "grunt": "latest",
-    "grunt-bower": "latest",
-    "grunt-contrib-clean": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-copy": "latest",
-    "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-jshint": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-ngmin": "latest",
-    "jscs": "^2.5.0"
-  },
   "licenses": [
     {
       "type": "MIT",
       "url": "http://www.opensource.org/licenses/MIT"
     }
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/fairmanager/fm-dialogs/issues"
+  },
+  "homepage": "https://github.com/fairmanager/fm-tdialogs"
 }
