--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
   "name": "fm-dialogs",
   "description": "FairManager Dialog Component",
-  "homepage": "https://github.com/fairmanager/fm-tdialogs",
+  "homepage": "https://github.com/fairmanager/fm-dialogs",
   "authors": [
-    "Michael Conroy <michael.e.conroy@gmail.com>",
     "Oliver Salzburg <oliver.salzburg@gmail.com>"
   ],
   "main": "dist/fm-dialogs.tpls.js",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "angular": ">=1.2.7",
-    "bootstrap": ">=3.0.3"
+    "angular": "^1.5.0",
+    "angular-bootstrap": "^1.2.1",
+    "bootstrap": "^3.3.6"
   },
   "ignore": [
     "**/.*",
