--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-bootstrap": "^1.2.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "fm-error-analyzer": "*"
   },
   "ignore": [
     "**/.*",
