--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular": "^1.5.0",
     "angular-bootstrap": "^1.2.1",
     "bootstrap": "^3.3.6",
-    "fm-error-analyzer": "*"
+    "fm-error-analyzer": "1.1.0"
   },
   "ignore": [
     "**/.*",
