[TASK] Update code style

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,17 @@
 * text eol=lf
+*.bat text eol=crlf
 *.cmd text eol=crlf
 
 *.ai binary
+*.aiff binary
 *.exe binary
+*.jar binary
 *.jpg binary
+*.mp3 binary
+*.o binary
 *.pdf binary
 *.png binary
 *.psd binary
+*.so binary
+*.winmd binary
 *.zip binary
