[TASK] Use grunt instead of gulp

--- a/.release.json
+++ b/.release.json
@@ -3,7 +3,7 @@
 		"tasks": [
 			{
 				"name": "Build distribution files",
-				"command": "gulp",
+				"command": "grunt",
 				"comment": "[TASK] Build dist files"
 			}
 		]
