[TASK] Update code style

--- a/.jscsrc
+++ b/.jscsrc
@@ -113,7 +113,8 @@
 		"all": true
 	},
 	"safeContextKeyword": [
-		"self"
+		"self",
+		"vm"
 	],
 	"validateLineBreaks": "LF",
 	"validateParameterSeparator": ", ",
