--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jscs": "^2.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jscs src && jshint src"
   },
   "repository": {
     "type": "git",
