--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fm-error-analyzer": "1.4.2"
   },
   "devDependencies": {
+    "eslint": "4.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.10.0",
@@ -16,8 +17,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.9.1",
     "grunt-html2js": "^0.3.5",
-    "grunt-ng-annotate": "^1.0.1",
-    "jscs": "^2.6.0"
+    "grunt-ng-annotate": "^1.0.1"
   },
   "scripts": {
     "test": "jscs src && jshint src"
